--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div class="content_wrapper">
        <div class="fixed_items">
-        <div class="jix_logo"><a href="#"><img src="images/icons/logo-2019-mini.png" alt="j.ix" alt="Janine Fernandez Logo"></a></div><!--jix_logo ENDS-->
+        <div class="jix_logo"><a href="#"><img src="https://github.com/janinebfernandez/Portfolio" alt="j.ix" alt="Janine Fernandez Logo"></a></div><!--jix_logo ENDS-->
         <div class="social_media">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a></li>
