--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <style>
     .intro{
         width:100%;
-        background-image: url("images/banner/banner_index_1.jpg");
+        background-image: url("https://raw.githubusercontent.com/janinebfernandez/Banners/master/portfolio-dynamic/banner_index_1.jpg");
         background-size: cover;
     }
 
