--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
         .intro{
-            background-image: url("../images/banner/banner_project.jpg");
+            background-image: url("https://raw.githubusercontent.com/janinebfernandez/Banners/master/portfolio-dynamic/banner_project.jpg");
             background-size: cover;
         }
 
@@ -69,7 +69,7 @@
 <body>
     <div class="content_wrapper">
        <div class="fixed_items">
-            <div class="jix_logo"><a href="../index.html"><img src="../images/icons/logo-2019-mini.png" alt="j.ix" alt="Janine Fernandez Logo"></a></div><!--jix_logo ENDS-->
+            <div class="jix_logo"><a href="../index.html"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" alt="j.ix" alt="Janine Fernandez Logo"></a></div><!--jix_logo ENDS-->
             <div class="social_media">
             <ul>
                 <li><a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a></li>
