--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#">Home</a>
-    <a href="../Photography/photography.html">Photography</a>
+    <a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a>
     <a href="../Web_Design/web_design.html">Web Design</a>
     <a href="../Graphic_Design/graphic_design.html">Graphic Design</a>
     <a href="../Typography/typography.html">Typography</a>
