image location update

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -140,11 +140,11 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="../index.html">Home</a>
     <a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a>
-    <a href="../../Web_Design/web_design.html">Web Design</a>
-    <a href="../../Graphic_Design/graphic_design.html">Graphic Design</a>
-    <a href="../../Typography/typography.html">Typography</a>
-    <a href="projects.html">Projects</a>
-    <a href="../../Logo/logo.html">Logo</a>
+    <a href="https://janinebfernandez.github.io/Web_Design/web_design.html">Web Design</a>
+    <a href="https://janinebfernandez.github.io/Graphic_Design/graphic_design.html">Graphic Design</a>
+    <a href="https://janinebfernandez.github.io/Typography/typography.html">Typography</a>
+    <a href="https://janinebfernandez.github.io/Portfolio/pages/projects.html">Projects</a>
+    <a href="https://janinebfernandez.github.io/Logo_Design/logo.html">Logo</a>
     <a href="https://janinebfernandez.github.io/Creative9/index.html" target="_blank">Creative9</a>
     <a class="about_me" href="#">About Me</a>
 </div>
