--- a/pages/projects.html
+++ b/pages/projects.html
@@ -151,13 +151,13 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="../index.html">Home</a>
     <a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a>
-    <a href="../../Web_Design/web_design.html">Web Design</a>
-    <a href="../../Graphic_Design/graphic_design.html">Graphic Design</a>
-    <a href="../../Typography/typography.html">Typography</a>
+    <a href="https://janinebfernandez.github.io/Web_Design/web_design.html">Web Design</a>
+    <a href="https://janinebfernandez.github.io/Graphic_Design/graphic_design.html">Graphic Design</a>
+    <a href="https://janinebfernandez.github.io/Typography/typography.html">Typography</a>
     <a href="#">Projects</a>
-    <a href="../../Logo/logo.html">Logo</a>
+    <a href="https://janinebfernandez.github.io/Logo_Design/logo.html">Logo</a>
     <a href="https://janinebfernandez.github.io/Creative9/index.html" target="_blank">Creative9</a>
-    <a class="about_me" href="../../Portfolio/pages/aboutme.html">About Me</a>
+    <a class="about_me" href="https://janinebfernandez.github.io/Portfolio/pages/aboutme.html">About Me</a>
 </div>
   <span class="nav_button" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 <!-------NAVIGATION ENDS-------->
