--- a/pages/projects.html
+++ b/pages/projects.html
@@ -100,13 +100,13 @@
                         <img class="img_icon_li" src="https://janinebfernandez.github.io/Portfolio/images/projects/cards/caffeine92_giftcard-icon.png" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
                     </div></li>
                     <li><div class="column align_icon">
-                        <a href="../../Projects/LMGC/golf_course.html" target = "_blank"><img class="img_icon_li" src="https://raw.githubusercontent.com/janinebfernandez/LMGC/master/images/LMGC-icon-small.png"></a>
+                        <a href="https://janinebfernandez.github.io/LMGC/golf_course.html" target = "_blank"><img class="img_icon_li" src="https://raw.githubusercontent.com/janinebfernandez/LMGC/master/images/LMGC-icon-small.png"></a>
                     </div></li>
                     <li><div class="column align_icon">
-                        <a href="../../Projects/Coffee_Infographics/coffee_infographics.html" target = "_blank"><img class="img_icon_li" src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/Coffee-inforgraph-icon-small.png"></a>
+                        <a href="https://janinebfernandez.github.io/Coffee_Infographics/coffee_infographics.html" target = "_blank"><img class="img_icon_li" src="https://raw.githubusercontent.com/janinebfernandez/Coffee_Infographics/master/images/coffee_info/Coffee-inforgraph-icon-small.png"></a>
                     </div></li>
                     <li><div class="column align_icon">
-                        <a href="../../Projects/Zodiac/zodiac_sign.html" target = "_blank"><img class="img_icon_li" src="https://janinebfernandez.github.io/Portfolio/images/projects/zodiac_sign/zodiac-icon-small.png"></a>
+                        <a href="https://janinebfernandez.github.io/Zodiac_Sign/Sign_Qualities/zodiac_sign.html" target = "_blank"><img class="img_icon_li" src="https://janinebfernandez.github.io/Portfolio/images/projects/zodiac_sign/zodiac-icon-small.png"></a>
                     </div></li>
 
                 </ul>
