--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <div class="block_1">
                 <div class="block_1_title_div"><p class="block_1_title">MY WORK</p></div>
                 <ul>
-                    <li><a href="../Photography/photography.html"><div class="sq_block op_overlay" id="block_img_1"></div><div class="block_text"><p>PHOTOGRAPHY</p></div></a></li>
+                    <li><a href="../Photos-by-Janine/photography.html"><div class="sq_block op_overlay" id="block_img_1"></div><div class="block_text"><p>PHOTOGRAPHY</p></div></a></li>
                     <li><a href="../Web_Design/web_design.html"><div class="sq_block op_overlay" id="block_img_2"></div><div class="block_text"><p>WEB DESIGN</p></div></a></li>
                     <li><a href="../Graphic_Design/graphic_design.html"><div class="sq_block op_overlay" id="block_img_3"></div><div class="block_text"><p>GRAPHIC DESIGN</p></div></a></li>
                     <li><a href="../Typography/typography.html"><div class="sq_block op_overlay" id="block_img_4"></div><div class="block_text"><p>TYPOGRAPHY</p></div></a></li>
                     <li><a href="pages/projects.html"><div class="sq_block op_overlay" id="block_img_5"></div><div class="block_text"><p>PROJECTS</p></div></a></li>
                     <li><a href="../Logo/logo.html"><div class="sq_block op_overlay" id="block_img_6"></div><div class="block_text"><p>LOGO</p></div></a></li>
-                    <li><a href="https://janinebfernandez.github.io/Creative9/index.html"><div class="sq_block op_overlay" id="block_img_7"></div><div class="block_text"><p>CREATIVE</p></div></a></li>
+                    <li><a href="https://janinebfernandez.github.io/Creative9/index.html"><div class="sq_block op_overlay" id="block_img_7"></div><div class="block_text"><p>CREATIVE9</p></div></a></li>
                 </ul>
             </div><!--BLOCK_1 ENDS-->
 
