--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -87,7 +87,7 @@
                 <div class="block_content">
                     <h1>Visual Design</h1>
                     <div class="left_block">
-                        <p>To produce aesthetic content I apply my knowledge of color, shapes, and lines - followed by tools suck as Photoshop or Illustrator.
+                        <p>To produce aesthetic content I apply my knowledge of color, shapes, and lines - followed by tools such as Photoshop or Illustrator.
                             These are the basics of every design and if implemented correctly you can produce successful results. </p>
                     </div>
                     <div class="right_block">
