--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="project_container">
             <div class="intro">
                 <div id="index_content">
-                    <div id="name"><bold>Janine B. Fernandez</bold></div><!--name ENDS-->
-                    <div id="profession"><h1>CREATIVE DESIGNER</h1><h3>IN THE DIGITAL SPACE</h3></div><!--profession ENDS-->
+                    <div id="name"><bold>Hi, I'm Janine</bold></div><!--name ENDS-->
+                    <div id="profession"><h1>I design, code, paint, and draw.</h1><h3>CREATING ART IN THE DIGITAL SPACE</h3></div><!--profession ENDS-->
                 </div><!--index_content ENDS-->
             </div><!--INTRO ENDS-->
             <div class="block_1">
-                <div class="block_1_title_div"><p class="block_1_title">MY WORK</p></div>
+                <div class="block_1_title_div"><p class="block_1_title"><span class="bck_gradient"><span class="white_text">MY </span>WORK</span></p></div>
                 <ul>
                     <li><a href="../Photos-by-Janine/photography.html"><div class="sq_block op_overlay" id="block_img_1"></div><div class="block_text"><p>PHOTOGRAPHY</p></div></a></li>
                     <li><a href="../Web_Design/web_design.html"><div class="sq_block op_overlay" id="block_img_2"></div><div class="block_text"><p>WEB DESIGN</p></div></a></li>
