--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <li><a href="../Graphic_Design/graphic_design.html"><div class="sq_block op_overlay" id="block_img_3"></div><div class="block_text"><p>GRAPHIC DESIGN</p></div></a></li>
                     <li><a href="../Typography/typography.html"><div class="sq_block op_overlay" id="block_img_4"></div><div class="block_text"><p>TYPOGRAPHY</p></div></a></li>
                     <li><a href="pages/projects.html"><div class="sq_block op_overlay" id="block_img_5"></div><div class="block_text"><p>PROJECTS</p></div></a></li>
-                    <li><a href="../Logo/logo.html"><div class="sq_block op_overlay" id="block_img_6"></div><div class="block_text"><p>LOGO</p></div></a></li>
+                    <li><a href="../Logo_Design/logo.html"><div class="sq_block op_overlay" id="block_img_6"></div><div class="block_text"><p>LOGO</p></div></a></li>
                     <li><a href="https://janinebfernandez.github.io/Creative9/index.html"><div class="sq_block op_overlay" id="block_img_7"></div><div class="block_text"><p>CREATIVE9</p></div></a></li>
                 </ul>
             </div><!--BLOCK_1 ENDS-->
