--- a/pages/projects.html
+++ b/pages/projects.html
@@ -132,6 +132,8 @@
                 <div class="caption-container">
                     <p id="caption"></p>
                 </div>
+            </div><!--Modal-content ENDS-->
+            </div><!--myModal ENDS-->
         </div><!--project_container ENDS-->
     </div><!--content_wrapper ENDS-->
 
