--- a/pages/projects.html
+++ b/pages/projects.html
@@ -126,8 +126,8 @@
                   </div>
 
 
-                <!--<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>-->
+                  <!--<a class="prev" onclick="plusSlides(-1)"><span class="prev_bg">&#10094;</span></a>
+                  <a class="next" onclick="plusSlides(1)"><span class="next_bg">&#10095;</span></a>-->
               
                 <div class="caption-container">
                     <p id="caption"></p>
