--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 
     #block_img_1{background-image: url("images/thumbnail/thumb_photography.jpg");}
     #block_img_2{background-image: url("images/thumbnail/thumb_web_design.jpg");}
-    #block_img_3{background-image: url("images/thumbnail/thumb_graphic.jpg");}
-    #block_img_4{background-image: url("images/thumbnail/thumb_type.jpg");}
-    #block_img_5{background-image: url("images/thumbnail/thumb_projects.jpg");}
-    #block_img_6{background-image: url("images/thumbnail/thumb_logo.jpg");}
-    #block_img_7{background-image: url("images/thumbnail/thumb_creative9.jpg");}
+    #block_img_3{background-image: url("images/thumbnail/thumb_uxui.jpg");}
+    #block_img_4{background-image: url("images/thumbnail/thumb_graphic.jpg");}
+    #block_img_5{background-image: url("images/thumbnail/thumb_type.jpg");}
+    #block_img_6{background-image: url("images/thumbnail/thumb_projects.jpg");}
+    #block_img_7{background-image: url("images/thumbnail/thumb_logo.jpg");}
+    #block_img_8{background-image: url("images/thumbnail/thumb_creative9.jpg");}
 
 </style> 
 </head>
@@ -73,7 +74,7 @@
                     <li><a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a></li>
                 </ul>
             </div><!--social_media ENDS-->
-            <div class="copyright">2020</div><!--copyright ENDS-->
+            <div class="copyright">2021</div><!--copyright ENDS-->
         </div><!--fixed_item ENDS-->
 
         <div class="project_container">
@@ -88,11 +89,12 @@
                 <ul>
                     <li><a href="../Photos-by-Janine/photography.html"><div class="sq_block op_overlay" id="block_img_1"></div><div class="block_text"><p>PHOTOGRAPHY</p></div></a></li>
                     <li><a href="../Web_Design/web_design.html"><div class="sq_block op_overlay" id="block_img_2"></div><div class="block_text"><p>WEB DESIGN</p></div></a></li>
-                    <li><a href="../Graphic_Design/graphic_design.html"><div class="sq_block op_overlay" id="block_img_3"></div><div class="block_text"><p>GRAPHIC DESIGN</p></div></a></li>
-                    <li><a href="../Typography/typography.html"><div class="sq_block op_overlay" id="block_img_4"></div><div class="block_text"><p>TYPOGRAPHY</p></div></a></li>
-                    <li><a href="pages/projects.html"><div class="sq_block op_overlay" id="block_img_5"></div><div class="block_text"><p>PROJECTS</p></div></a></li>
-                    <li><a href="../Logo_Design/logo.html"><div class="sq_block op_overlay" id="block_img_6"></div><div class="block_text"><p>LOGO</p></div></a></li>
-                    <li><a href="https://janinebfernandez.github.io/Creative9/index.html"><div class="sq_block op_overlay" id="block_img_7"></div><div class="block_text"><p>CREATIVE9</p></div></a></li>
+                    <li><a href="../UXUI_Design/uxui.html"><div class="sq_block op_overlay" id="block_img_3"></div><div class="block_text"><p>UXUI Development</p></div></a></li>
+                    <li><a href="../Graphic_Design/graphic_design.html"><div class="sq_block op_overlay" id="block_img_4"></div><div class="block_text"><p>GRAPHIC DESIGN</p></div></a></li>
+                    <li><a href="../Typography/typography.html"><div class="sq_block op_overlay" id="block_img_5"></div><div class="block_text"><p>TYPOGRAPHY</p></div></a></li>
+                    <li><a href="pages/projects.html"><div class="sq_block op_overlay" id="block_img_6"></div><div class="block_text"><p>PROJECTS</p></div></a></li>
+                    <li><a href="../Logo_Design/logo.html"><div class="sq_block op_overlay" id="block_img_7"></div><div class="block_text"><p>LOGO</p></div></a></li>
+                    <li><a href="https://janinebfernandez.github.io/Creative9/index.html"><div class="sq_block op_overlay" id="block_img_8"></div><div class="block_text"><p>CREATIVE9</p></div></a></li>
                 </ul>
             </div><!--BLOCK_1 ENDS-->
 
@@ -108,6 +110,7 @@
     <a href="#">Home</a>
     <a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a>
     <a href="https://janinebfernandez.github.io/Web_Design/web_design.html">Web Design</a>
+    <a href="https://janinebfernandez.github.io/UXUI_Design/uxui.html">UXUI Development</a>
     <a href="https://janinebfernandez.github.io/Graphic_Design/graphic_design.html">Graphic Design</a>
     <a href="https://janinebfernandez.github.io/Typography/typography.html">Typography</a>
     <a href="https://janinebfernandez.github.io/Portfolio/pages/projects.html">Projects</a>
