--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -141,6 +141,7 @@
     <a href="../index.html">Home</a>
     <a href="https://janinebfernandez.github.io/Photos-by-Janine/photography.html">Photography</a>
     <a href="https://janinebfernandez.github.io/Web_Design/web_design.html">Web Design</a>
+    <a href="https://janinebfernandez.github.io/UXUI_Design/uxui.html">UXUI Development</a>
     <a href="https://janinebfernandez.github.io/Graphic_Design/graphic_design.html">Graphic Design</a>
     <a href="https://janinebfernandez.github.io/Typography/typography.html">Typography</a>
     <a href="https://janinebfernandez.github.io/Portfolio/pages/projects.html">Projects</a>
