--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="project_container">
             <div class="intro">
                 <div id="index_content">
-                    <div id="name"><bold>Hi, I'm Janine</bold></div><!--name ENDS-->
+                    <div id="name"><bold>Hi, I'm Janine!</bold></div><!--name ENDS-->
                     <div id="profession"><h1>I design, code, draw, and take photos.</h1><h3>CREATING ART IN THE DIGITAL SPACE</h3></div><!--profession ENDS-->
                 </div><!--index_content ENDS-->
             </div><!--INTRO ENDS-->
