--- a/pages/projects.html
+++ b/pages/projects.html
@@ -83,7 +83,7 @@
             <div class="intro">
                 <h2>CREATIVE PROJECT</h2>
                 <h3>Stay Creative</h3>
-                <p>How many ways can you produce art?</p>
+                <!--<p>How many ways can you produce art?</p>-->
             </div><!--INTRO ENDS-->
 
 
