--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,6 +29,7 @@
     <script src="../js/slider.js"></script>
         
     <!--Stylesheet-->
+    <link href="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" rel="shortcut icon" type="image/x-icon" /> 
     <link href="../css/normalize.css" type="text/css" rel="stylesheet">
     <link href="../css/side-nav.css" type="text/css" rel="stylesheet">
     <link href="../css/slider.css" type="text/css" rel="stylesheet">
