--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="js/side-nav.js"></script>
         
     <!--Stylesheet-->
+    <link href="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" rel="shortcut icon" type="image/x-icon" /> 
     <link href="css/normalize.css" type="text/css" rel="stylesheet">
     <link href="css/content.css" type="text/css" rel="stylesheet">
     <link href="css/side-nav.css" type="text/css" rel="stylesheet">
