--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link href="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" rel="shortcut icon" type="image/x-icon" /> 
     <link href="css/normalize.css" type="text/css" rel="stylesheet">
     <link href="css/content.css" type="text/css" rel="stylesheet">
+    <link href="css/creative9.css" type="text/css" rel="stylesheet">
     <link href="css/side-nav.css" type="text/css" rel="stylesheet">
     <link href="css/media-query.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
