--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -23,12 +23,13 @@
     <meta charset="UTF-8">
 
     <!--Javascript-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/toggle.js"></script>
     <script src="../js/side-nav.js"></script>
     <script src="../js/slider.js"></script>
         
     <!--Stylesheet-->
+    <link href="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" rel="shortcut icon" type="image/x-icon" /> 
     <link href="../css/normalize.css" type="text/css" rel="stylesheet">
     <link href="../css/side-nav.css" type="text/css" rel="stylesheet">
     <link href="../css/slider.css" type="text/css" rel="stylesheet">
@@ -57,20 +58,19 @@
                 <li><a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a></li>
             </ul>
             </div><!--social_media ENDS-->
-            <div class="copyright">2020</div><!--copyright ENDS-->
+            <div class="copyright">2021</div><!--copyright ENDS-->
         </div><!--fixed_item ENDS-->
 
         <div class="project_container">
             <div class="intro">
                 <h2>Janine B. Fernandez</h2>
-                <h3>ABOUT ME</h3>
-                <p>
-                    My first memory of creating digital art was during Myspace where I created my own page layouts.
-                    Since then, there has been various tools and outlet available and creating content has evolved into something much bigger.
-                    As change continue to happen, I want to utilize time to produce content that people can enjoy.
-                    If you have any questions for me, please feel free to reach out!
-                </p>
-                <h4>janinebfernandez@gmail.com</h4>
+                <h3>Growth through design.</h3>
+                <div id="aboutme_contact_block">
+                    <h5><img src="../images/icons/phone.png" alt="contact phone numer" alt="Janine Fernandez LinkedIn"> 1(858)531-3448</h5>
+                    <h5><img src="../images/icons/email.png" alt="email address" alt="Janine Fernandez LinkedIn"><a href="mailto:janinebfernandez@gmail.com" target="_blank"> janinebfernandez@gmail.com</a></h5>
+                    <h5><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"><a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"> www.linkedin.com/in/janinebfernandez</a></h5>
+                    <h5><img src="../images/icons/resume.png" alt="Janine Fernandez Resume" alt="Janine Fernandez LinkedIn"><a href="Janine_Fernandez_Resume_2021.pdf" target = "_blank"> View & Download Resume</a></h5>
+                </div>
             </div><!--INTRO ENDS-->
             <div class="block_1">
                 <div class="block_content">
