--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -44,6 +44,8 @@
             background-image: url("https://raw.githubusercontent.com/janinebfernandez/Banners/master/portfolio-dynamic/banner_aboutme.jpg");
             background-size: cover;
         }
+
+
 </style> 
 </head>
 
@@ -64,7 +66,10 @@
         <div class="project_container">
             <div class="intro">
                 <h2>Janine B. Fernandez</h2>
-                <h3>Growth through design.</h3>
+                <h4>"Chasing Curiosities"</h4>
+                <div id="profile_photo">
+                    <img src="../images/janine_fernandez1.png">
+                </div>
                 <div id="aboutme_contact_block">
                     <h5><img src="../images/icons/phone.png" alt="contact phone numer" alt="Janine Fernandez LinkedIn"> 1(858)531-3448</h5>
                     <h5><img src="../images/icons/email.png" alt="email address" alt="Janine Fernandez LinkedIn"><a href="mailto:janinebfernandez@gmail.com" target="_blank"> janinebfernandez@gmail.com</a></h5>
