--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <div class="social_media">
                 <ul>
                     <li><a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a></li>
-                    <li><a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCVe5R0bPk2W4yyWTtPbvomg" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a></li>
+                    <li><a href="https://www.instagram.com/jbf.creative" target = "_blank"><img src="images/icons/paint-brush.png" alt="Janine Fernandez Instagram"></a></li>
+                    <li><a href="https://www.instagram.com/jbf.shutterstop" target = "_blank"><img src="images/icons/camera.png" alt="Janine Fernandez Instagram"></a></li>
                 </ul>
             </div><!--social_media ENDS-->
             <div class="copyright">2021</div><!--copyright ENDS-->
@@ -82,8 +83,8 @@
         <div class="project_container">
             <div class="intro">
                 <div id="index_content">
-                    <div id="name"><bold>Hi, I'm Janine</bold></div><!--name ENDS-->
-                    <div id="profession"><h1>I design, code, draw, and take photos.</h1><h3>CREATING ART IN THE DIGITAL SPACE</h3></div><!--profession ENDS-->
+                    <div id="name"><bold>Hello, <br>My name is Janine</bold></div><!--name ENDS-->
+                    <div id="profession"><h1>I design, code, draw, and take photos.</h1><h3>STAY CREATIVE</h3></div><!--profession ENDS-->
                 </div><!--index_content ENDS-->
             </div><!--INTRO ENDS-->
             <div class="block_1">
