--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -52,7 +52,7 @@
 <body>
     <div class="content_wrapper">
        <div class="fixed_items">
-            <div class="jix_logo"><a href="../index.html"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/logo-2019-mini.png" alt="j.ix" alt="Janine Fernandez Logo"></a></div><!--jix_logo ENDS-->
+        <div class="jix_logo"><a href="#"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/jbf-logo-mini.png" alt="Janine B. Fernandez Logo"></a></div><!--jbf_logo ENDS-->
             <div class="social_media">
             <ul>
                 <li><a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a></li>
