social media update

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -73,8 +73,9 @@
             <div class="social_media">
             <ul>
                 <li><a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn" alt="Janine Fernandez LinkedIn"></a></li>
-                <li><a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Janine Fernandez Flickr"></a></li>
-                <li><a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Janine Fernandez Instagram"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCVe5R0bPk2W4yyWTtPbvomg" target = "_blank"><img src="https://github.com/janinebfernandez/Portfolio/blob/master/images/icons/youtube-icon.png?raw=true" alt="Janine Fernandez Flickr"></a></li>
+                <li><a href="https://www.instagram.com/jbf.creative" target = "_blank"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/paint-brush.png" alt="Janine Fernandez Instagram"></a></li>
+                <li><a href="https://www.instagram.com/jbf.shutterstop" target = "_blank"><img src="https://raw.githubusercontent.com/janinebfernandez/Portfolio/master/images/icons/camera.png" alt="Janine Fernandez Instagram"></a></li>
             </ul>
             </div><!--social_media ENDS-->
             <div class="copyright">2020</div><!--copyright ENDS-->
